@@ -3,6 +3,8 @@ from zope.interface import classProvides, implements
 from collective.transmogrifier.interfaces import ISectionBlueprint
 from collective.transmogrifier.interfaces import ISection
 
+from collective.transmogrifier.utils import resolvePackageReferenceOrFile
+
 class CSVSourceSection(object):
     classProvides(ISectionBlueprint)
     implements(ISection)
@@ -10,7 +12,8 @@ class CSVSourceSection(object):
     def __init__(self, transmogrifier, name, options, previous):
         self.previous = previous
         
-        file_ = open(options['filename'], 'r')
+        filename = resolvePackageReferenceOrFile(options['filename'])
+        file_ = open(filename, 'r')
         dialect = options.get('dialect', 'excel')
         fieldnames = options.get('fieldnames')
         if fieldnames:
